# theia

./: .gitignore  README.md  pyproject.toml
.claude/agents/: theia.md
.claude/skills/design/: SKILL.md
src/theia/: __init__.py  server.py
src/theia/knowledge/: __init__.py  accessibility_standards.json  component_patterns.json  decision_rules.json  design_methodologies.json  design_systems.json  graph_loader.py  loader.py
src/theia/tools/: __init__.py  _shared.py  audit_design.py  evaluate_accessibility.py  log_decision.py  plan_design_system.py  spec_component.py
tests/: ab_test_hyperion_dashboard.py  conftest.py  test_knowledge.py  test_tools.py
tests/benchmarks/: REAL_AB_TEST.md
tests/benchmarks/results/: augmented.json  vanilla.json
